3.3.4/_sources/gallery/lines_bars_and_markers/simple_plot.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/lines_bars_and_markers/simple_plot.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        Click :ref:`here <sphx_glr_download_gallery_lines_bars_and_markers_simple_plot.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_lines_bars_and_markers_simple_plot.py:


===========
Simple Plot
===========

Create a simple plot.

.. GENERATED FROM PYTHON SOURCE LINES 8-27

.. code-block:: default


    import matplotlib
    import matplotlib.pyplot as plt
    import numpy as np

    # Data for plotting
    t = np.arange(0.0, 2.0, 0.01)
    s = 1 + np.sin(2 * np.pi * t)

    fig, ax = plt.subplots()
    ax.plot(t, s)

    ax.set(xlabel='time (s)', ylabel='voltage (mV)',
           title='About as simple as it gets, folks')
    ax.grid()

    fig.savefig("test.png")
    plt.show()




.. image:: /gallery/lines_bars_and_markers/images/sphx_glr_simple_plot_001.png
    :alt: About as simple as it gets, folks
    :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 28-34

------------

References
""""""""""

The use of the following functions and methods is shown in this example:

.. GENERATED FROM PYTHON SOURCE LINES 35-40

.. code-block:: default


    matplotlib.axes.Axes.plot
    matplotlib.pyplot.plot
    matplotlib.pyplot.subplots
    matplotlib.figure.Figure.savefig




.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none


    <function Figure.savefig at 0x7fcc163585e0>




.. _sphx_glr_download_gallery_lines_bars_and_markers_simple_plot.py:


.. only :: html

 .. container:: sphx-glr-footer
    :class: sphx-glr-footer-example



  .. container:: sphx-glr-download sphx-glr-download-python

     :download:`Download Python source code: simple_plot.py <simple_plot.py>`



  .. container:: sphx-glr-download sphx-glr-download-jupyter

     :download:`Download Jupyter notebook: simple_plot.ipynb <simple_plot.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    Keywords: matplotlib code example, codex, python plot, pyplot
    `Gallery generated by Sphinx-Gallery
    <https://sphinx-gallery.readthedocs.io>`_
